--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "easy-git",
     "easy git",
     "gite",
+    "git-easy",
+    "egit",
+    "git easy",
     "git commands"
   ],
   "scripts": {
